--- a/public/css/my_playlists_panel_style.css
+++ b/public/css/my_playlists_panel_style.css
@@ -23,6 +23,7 @@ html {
     float: left;
     margin-top: 2%;
     margin-left: 10%;
+    width: 100%;
 }
 
 .subheaders_titles {
@@ -30,8 +31,6 @@ html {
     font-family: none;
     font-size: xxx-large;
 }
-
-
 
 .subheaders_browser_div {
     float: left;
@@ -67,7 +66,6 @@ html {
     font-size: x-large;
 }
 
-/*----------------------------------- Playlists Section -------------------------------------------------*/
 /*----------------------------------- Playlists Section -------------------------------------------------*/
 .playlists_section {
     float: left;
