--- a/public/css/signup_style.css
+++ b/public/css/signup_style.css
@@ -1,86 +1,96 @@
+body {
+    background: #282828;
+}
+
+.jumbotron {
+    text-align: center;
+    width: 30rem;
+    border-radius: 0.5rem;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
+    margin: 4rem auto;
+    background-color: #282828;
+    padding: 2rem;
+}
+
+.container .glyphicon-list-alt {
+    font-size: 10rem;
+    margin-top: 3rem;
+    color: #f96145;
+}
+
+input {
+    width: 140%;
+    margin-bottom: 1.4rem;
+    padding: 0.8rem;
+    background-color: #464646;
+    border-radius: 0.2rem;
+    border: none;
+    margin-left: -20%;
+    color: #ffffff;
+}
+h2 {
+    margin-bottom: 3rem;
+    font-weight: bold;
+    color: #ababab;
+}
+.btn {
+    border-radius: 0.2rem;
+}
+.btn .glyphicon {
+    font-size: 3rem;
+    color: #fff;
+}
+.full-width {
+    background-color: #3500D3;
+    width: 75%;
+    color: #ffffff;
+    border: 1px solid white;
+    font-weight:bold;
+    font-family: monospace;
+}
+
+.signup_logo{
+    width: 38%;
+    margin-top: -11%;
+}
+
+.box {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin-bottom: 3rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
+    color: #3d3d3d;
+}
+
+.already_account_text{
+    margin-top: 2%;
+    margin-bottom: 2%;
+    color: #9B9B9B;
+    font-weight: bold;
+    font-family: monospace;
+}
+
+
+
 /* Media Query para Móvil */
 @media only screen and (max-width: 767px){
 
-}
-
-/* Media Query para PC */
-@media only screen and (min-width: 768px){
-
-    body {
-        background: #282828;
-    }
-
-    .jumbotron {
-        text-align: center;
-        width: 30rem;
-        border-radius: 0.5rem;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        position: absolute;
-        margin: 4rem auto;
-        background-color: #282828;
-        padding: 2rem;
-    }
-
-    .container .glyphicon-list-alt {
-        font-size: 10rem;
-        margin-top: 3rem;
-        color: #f96145;
-    }
-
     input {
-        width: 140%;
+        width: 120%;
         margin-bottom: 1.4rem;
         padding: 0.8rem;
         background-color: #464646;
         border-radius: 0.2rem;
         border: none;
-        margin-left: -20%;
+        margin-left: -9%;
         color: #ffffff;
     }
-    h2 {
-        margin-bottom: 3rem;
-        font-weight: bold;
-        color: #ababab;
-    }
-    .btn {
-        border-radius: 0.2rem;
-    }
-    .btn .glyphicon {
-        font-size: 3rem;
-        color: #fff;
-    }
-    .full-width {
-        background-color: #3500D3;
-        width: 75%;
-        color: #ffffff;
-        border: 1px solid white;
-        font-weight:bold;
-        font-family: monospace;
-    }
 
-    .signup_logo{
-        width: 38%;
-        margin-top: -11%;
-    }
-
-    .box {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        margin-bottom: 3rem;
-        margin-left: 3rem;
-        margin-right: 3rem;
-        color: #3d3d3d;
-    }
-
-    .already_account_text{
-        margin-top: 2%;
-        margin-bottom: 2%;
-        color: #9B9B9B;
-        font-weight: bold;
-        font-family: monospace;
-    }
 }
+
