--- a/public/css/songs_panel_style.css
+++ b/public/css/songs_panel_style.css
@@ -7,7 +7,7 @@ html {
 
 /*--------------------------------------------------- Content --------------------------------------------------------*/
 
-/*----------------------------------- Songs - Browser -----------------------------*/
+/*----------------------------------- Songs - Browser - Add Song Subheader Section -------------------*/
 .subheaders_section {
     background-color: #282828;
     float: left;
@@ -47,6 +47,24 @@ html {
     background-color: white;
 }
 
+.subheaders_btn_div {
+    float: right;
+    margin-top: 5.5%;
+    margin-right: 10%;
+    width: 70%;
+    margin-left: 7%;
+}
+.subheaders_btn_image {
+    width: 17%;
+    margin-bottom: 2%;
+}
+
+.subheaders_link {
+    font-family: none;
+    text-decoration: none;
+    color: white;
+    font-size: x-large;
+}
 
 /*----------------------------------- Songs Section -------------------------------------------------*/
 .songs_section {
@@ -54,19 +72,17 @@ html {
     background-color: #282828;
     display: grid;
     grid-template-columns: auto;
-    margin-left: 1%;
+    margin-left: 5%;
     margin-top: 5%;
-    width: 44%;
+    width: 100%;
 }
 
 .song_div {
-    margin-left: 8%;
-    margin-bottom: 5%;
 }
 
 
 .song_img {
-    width: 37%;
+    width: 16%;
     margin-top: 2%;
     padding: 1%;
     float: left;
@@ -75,8 +91,8 @@ html {
 .song_text_div {
     float: left;
     margin-top: 4%;
-    margin-left: 10%;
-    width: 38%;
+    margin-left: 7%;
+    width: 24%;
 }
 
 .song_name_text {
@@ -90,3 +106,42 @@ html {
     font-size: small;
     margin-top: 5%;
 }
+
+.edit_delete_btns {
+    text-align: center;
+    margin-bottom: 12%;
+    float: right;
+    margin-top: 5%;
+    width: 44%;
+}
+
+.edit_btn {
+    padding: 2%;
+    text-align: center;
+    outline: none;
+    color: #fff;
+    background-color: #066397;
+    border: none;
+    border-radius: 50%;
+    padding-right: 4%;
+    padding-left: 4%;
+}
+
+.edit_btn_img {
+}
+
+.delete_btn {
+    padding: 2%;
+    text-align: center;
+    outline: none;
+    color: #fff;
+    background-color: red;
+    border: none;
+    border-radius: 50%;
+    padding-left: 4%;
+    padding-right: 4%;
+}
+
+.delete_btn_img {
+}
+
