--- a/public/css/search_dashboard_style.css
+++ b/public/css/search_dashboard_style.css
@@ -70,13 +70,25 @@ html {
     .song_name_text {
         color: white;
         font-size: larger;
-        margin-top: 5%;
+        margin-top: 3%;
+        margin-bottom: 3%;
+    }
+
+    .song_album_text {
+        color: white;
+        font-size: medium;
+        margin-top: 3%;
+        margin-bottom: 3%;
     }
 
     .song_artist_text {
         color: white;
         font-size: small;
-        margin-top: 5%;
+        margin-top: 3%;
+    }
+
+    .song_duration_text {
+        display: none;
     }
 
     /*----------------------------------- Playlists Results -------------------------------------------------*/
@@ -141,7 +153,7 @@ html {
         width: 54%;
         grid-template-columns: auto;
         margin-top: 3%;
-        margin-left: 27%;
+        margin-left: 22%;
         grid-column-gap: 14%;
     }
 
@@ -166,7 +178,7 @@ html {
         background-color: #282828;
         display: grid;
         grid-template-columns: auto;
-        margin-left: 27%;
+        margin-left: 21%;
         margin-top: 5%;
         width: 100%;
     }
@@ -186,7 +198,7 @@ html {
 
     .song_text_div {
         float: left;
-        margin-top: 4%;
+        margin-top: 2%;
         margin-left: 7%;
         width: 24%;
     }
@@ -195,13 +207,29 @@ html {
         color: white;
         font-size: larger;
         margin-top: 5%;
+        margin-bottom: 3%;
+    }
+
+    .song_album_text {
+        color: white;
+        font-size: medium;
+        margin-top: 2%;
+        margin-bottom: 3%;
     }
 
     .song_artist_text {
         color: white;
         font-size: small;
         margin-top: 5%;
+        margin-bottom: 3%;
     }
+
+    .song_duration_text {
+        color: white;
+        font-size: small;
+        margin-top: 3%;
+    }
+
 
     /*----------------------------------- Playlists Results -------------------------------------------------*/
 
