--- a/public/css/playlists_panel_style.css
+++ b/public/css/playlists_panel_style.css
@@ -4,151 +4,275 @@ html {
     width: 100vw;
     background-color: #282828;
 }
+/*Media Query para PC */
+@media only screen and (min-width:768px) {
+    /*--------------------------------------------------- Content --------------------------------------------------------*/
 
-/*--------------------------------------------------- Content --------------------------------------------------------*/
+    /*----------------------------------- Playlists - Browser - Add Playlist Subheader Section -------------------*/
+    .subheaders_section {
+        background-color: #282828;
+        float: left;
+        display: grid;
+        width: 100%;
+        grid-template-columns: auto auto auto;
+        margin-top: 3%;
+        margin-left: 3%;
+        grid-column-gap: 14%;
+    }
 
-/*----------------------------------- Playlists - Browser - Add Playlist Subheader Section -------------------*/
-.subheaders_section {
-    background-color: #282828;
-    float: left;
-    display: grid;
-    width: 100%;
-    grid-template-columns: auto auto auto;
-    margin-top: 3%;
-    margin-left: 3%;
-    grid-column-gap: 14%;
+    .subheaders {
+        float: left;
+        margin-top: 2%;
+        margin-left: 10%;
+        width: 100%;
+    }
+
+    .subheaders_titles {
+        color: white;
+        font-family: none;
+        font-size: xxx-large;
+    }
+
+    .mobile_subheaders_titles {
+        display: none;
+    }
+
+    .mobile_subheaders_hr {
+        display: none;
+    }
+
+    .subheaders_browser_div {
+        float: left;
+        margin-top: 8%;
+        margin-left: 5%;
+        margin-right: 7%;
+    }
+
+    .browser_input {
+        border-radius: 22px;
+        text-align: center;
+        background: url(../images/lupa_buscador.png) no-repeat 220px -1px;
+        background-size: contain;
+        background-color: white;
+    }
+
+    .subheaders_btn_div {
+        float: right;
+        margin-top: 5.5%;
+        margin-right: 10%;
+        width: 70%;
+        margin-left: 7%;
+    }
+    .subheaders_btn_image {
+        width: 17%;
+        margin-bottom: 2%;
+    }
+
+    .subheaders_link {
+        font-family: none;
+        text-decoration: none;
+        color: white;
+        font-size: x-large;
+    }
+
+    /*----------------------------------- Playlists Section -------------------------------------------------*/
+    .playlists_section {
+        float: left;
+        background-color: #282828;
+        display: grid;
+        grid-template-columns: auto auto auto auto auto;
+        margin-left: 1%;
+        margin-top: 5%;
+        width: 100%;
+    }
+
+    .playlist_div {
+        text-align: center;
+        width: 82%;
+    }
+
+    .playlist_img {
+        width: 48%;
+        margin-top: 2%;
+        /* padding: 1%; */
+    }
+
+    .playlist_text_div {
+        display: none;
+    }
+
+    .playlist_name_text {
+        color: white;
+        font-size: medium;
+        text-align: center;
+        margin-top: 3%;
+    }
+
+    .createdby_text {
+        color: white;
+        font-size: small;
+        text-align: center;
+        margin-bottom: 0;
+    }
+
+    .datesongnumber_text {
+        color: white;
+        font-size: x-small;
+        text-align: center;
+        margin-bottom: 0;
+
+    }
+
+    .followers_text {
+        color: white;
+        font-size: xx-small;
+        text-align: center;
+        margin-bottom: 3%;
+
+    }
+
+    .edit_delete_btns {
+        text-align: center;
+        margin-bottom: 15%;
+    }
+
+    .edit_btn {
+        padding: 2%;
+        text-align: center;
+        outline: none;
+        color: #fff;
+        background-color: #066397;
+        border: none;
+        border-radius: 50%;
+        padding-right: 4%;
+        padding-left: 4%;
+    }
+
+    .edit_btn_img {
+    }
+
+    .delete_btn {
+        padding: 2%;
+        text-align: center;
+        outline: none;
+        color: #fff;
+        background-color: red;
+        border: none;
+        border-radius: 50%;
+        padding-left: 4%;
+        padding-right: 4%;
+    }
+
+    .delete_btn_img {
+    }
 }
 
-.subheaders {
-    float: left;
-    margin-top: 2%;
-    margin-left: 10%;
-    width: 100%;
+
+/*Media Query para Movil */
+@media only screen and (max-width: 767px) {
+    /*--------------------------------------------------- Content --------------------------------------------------------*/
+
+    /*----------------------------------- Playlists - Browser - Add Playlist Subheader Section -------------------*/
+    .subheaders_section {
+        background-color: #282828;
+        float: left;
+        display: grid;
+        width: 100%;
+        grid-template-columns: auto auto auto;
+        margin-top: 3%;
+        margin-left: 16%;
+        grid-column-gap: 14%;
+    }
+
+    .subheaders {
+        float: left;
+        margin-top: 2%;
+        margin-left: 10%;
+        width: 100%;
+    }
+
+    .subheaders_titles {
+        display: none;
+    }
+
+    .mobile_subheaders_titles {
+        color: white;
+        font-family: none;
+        font-size: medium;
+    }
+
+    .mobile_subheaders_hr {
+        color: white;
+        margin: 0;
+        width: 185%;
+    }
+
+    .subheaders_browser_div {
+        display: none;
+    }
+
+    .subheaders_btn_div {
+        display: none;
+    }
+
+    /*----------------------------------- Playlists Section -------------------------------------------------*/
+    .playlists_section {
+        float: left;
+        background-color: #282828;
+        display: grid;
+        grid-template-columns: auto;
+        margin-left: 19%;
+        margin-top: 1%;
+        width: 100%;
+    }
+
+    .playlist_div {
+    }
+
+    .playlist_img {
+        width: 16%;
+        margin-top: 2%;
+        padding: 1%;
+        float: left;
+    }
+
+    .playlist_name_text,.createdby_text,.datesongnumber_text,.followers_text {
+        display: none;
+    }
+
+    .playlist_text_div {
+        float: left;
+        margin-top: 4%;
+        margin-left: 7%;
+        width: 33%;
+    }
+
+    .mobile_playlist_name_text {
+        color: white;
+        font-size: medium;
+        margin-top: 3%;
+    }
+
+    .mobile_createdby_text {
+        color: white;
+        font-size: small;
+        margin-bottom: 0;
+    }
+
+    .mobile_datesongnumber_text {
+        color: white;
+        font-size: x-small;
+        margin-bottom: 0;
+    }
+
+    .mobile_followers_text {
+        color: white;
+        font-size: xx-small;
+        margin-bottom: 3%;
+    }
+
+    .edit_delete_btns {
+        display: none;
+    }
 }
 
-.subheaders_titles {
-    color: white;
-    font-family: none;
-    font-size: xxx-large;
-}
-
-.subheaders_browser_div {
-    float: left;
-    margin-top: 8%;
-    margin-left: 5%;
-    margin-right: 7%;
-}
-
-.browser_input {
-    border-radius: 22px;
-    text-align: center;
-    background: url(../images/lupa_buscador.png) no-repeat 220px -1px;
-    background-size: contain;
-    background-color: white;
-}
-
-.subheaders_btn_div {
-    float: right;
-    margin-top: 5.5%;
-    margin-right: 10%;
-    width: 70%;
-    margin-left: 7%;
-}
-.subheaders_btn_image {
-    width: 17%;
-    margin-bottom: 2%;
-}
-
-.subheaders_link {
-    font-family: none;
-    text-decoration: none;
-    color: white;
-    font-size: x-large;
-}
-
-/*----------------------------------- Playlists Section -------------------------------------------------*/
-.playlists_section {
-    float: left;
-    background-color: #282828;
-    display: grid;
-    grid-template-columns: auto auto auto auto auto;
-    margin-left: 1%;
-    margin-top: 5%;
-    width: 100%;
-}
-
-.playlist_div {
-    text-align: center;
-    width: 82%;
-}
-
-.playlist_img {
-    width: 48%;
-    margin-top: 2%;
-    /* padding: 1%; */
-}
-
-.playlist_name_text {
-    color: white;
-    font-size: medium;
-    text-align: center;
-    margin-top: 3%;
-}
-
-.createdby_text {
-    color: white;
-    font-size: small;
-    text-align: center;
-    margin-bottom: 0;
-}
-
-.datesongnumber_text {
-    color: white;
-    font-size: x-small;
-    text-align: center;
-    margin-bottom: 0;
-
-}
-
-.followers_text {
-    color: white;
-    font-size: xx-small;
-    text-align: center;
-    margin-bottom: 3%;
-
-}
-
-.edit_delete_btns {
-    text-align: center;
-    margin-bottom: 15%;
-}
-
-.edit_btn {
-    padding: 2%;
-    text-align: center;
-    outline: none;
-    color: #fff;
-    background-color: #066397;
-    border: none;
-    border-radius: 50%;
-    padding-right: 4%;
-    padding-left: 4%;
-}
-
-.edit_btn_img {
-}
-
-.delete_btn {
-    padding: 2%;
-    text-align: center;
-    outline: none;
-    color: #fff;
-    background-color: red;
-    border: none;
-    border-radius: 50%;
-    padding-left: 4%;
-    padding-right: 4%;
-}
-
-.delete_btn_img {
-}
