--- a/public/css/admin_users_panel_style.css
+++ b/public/css/admin_users_panel_style.css
@@ -99,31 +99,42 @@ html {
     margin-bottom: 15%;
 }
 
+.user_edit_form {
+    width: 11%;
+    float: left;
+    margin-left: 37%;
+}
+
+.user_delete_form {
+    width: 11%;
+    float: left;
+}
+
 .edit_btn {
-    padding: 2%;
+    padding: 10%;
     text-align: center;
     outline: none;
     color: #fff;
     background-color: #066397;
     border: none;
     border-radius: 50%;
-    padding-right: 4%;
-    padding-left: 4%;
+    padding-right: 20%;
+    padding-left: 20%;
 }
 
 .edit_btn_img {
 }
 
 .delete_btn {
-    padding: 2%;
+    padding: 10%;
     text-align: center;
     outline: none;
     color: #fff;
     background-color: red;
     border: none;
     border-radius: 50%;
-    padding-left: 4%;
-    padding-right: 4%;
+    padding-left: 20%;
+    padding-right: 24%;
 }
 
 .delete_btn_img {
