--- a/public/css/songs_panel_style.css
+++ b/public/css/songs_panel_style.css
@@ -136,31 +136,42 @@ html {
         width: 44%;
     }
 
+    .song_edit_form {
+        width: 9%;
+        float: left;
+        margin-left: 45%;
+    }
+
+    .song_delete_form {
+        width: 8%;
+        float: left;
+    }
+
     .edit_btn {
-        padding: 2%;
+        padding: 10%;
         text-align: center;
         outline: none;
         color: #fff;
         background-color: #066397;
         border: none;
         border-radius: 50%;
-        padding-right: 4%;
-        padding-left: 4%;
+        padding-right: 20%;
+        padding-left: 20%;
     }
 
     .edit_btn_img {
     }
 
     .delete_btn {
-        padding: 2%;
+        padding: 10%;
         text-align: center;
         outline: none;
         color: #fff;
         background-color: red;
         border: none;
         border-radius: 50%;
-        padding-left: 4%;
-        padding-right: 4%;
+        padding-left: 20%;
+        padding-right: 23%;
     }
 
     .delete_btn_img {
