--- a/public/css/signup_style.css
+++ b/public/css/signup_style.css
@@ -14,6 +14,7 @@ body {
     margin: 4rem auto;
     background-color: #282828;
     padding: 2rem;
+    margin-top: 8%;
 }
 
 .container .glyphicon-list-alt {
@@ -51,10 +52,11 @@ h2 {
     border: 1px solid white;
     font-weight:bold;
     font-family: monospace;
+    margin-left: 0%;
 }
 
 .signup_logo{
-    width: 38%;
+    width: 39%;
     margin-top: -11%;
 }
 
@@ -62,15 +64,19 @@ h2 {
     position: absolute;
     bottom: 0;
     left: 0;
-    margin-bottom: 3rem;
+    margin-bottom: -3rem;
     margin-left: 3rem;
     margin-right: 3rem;
     color: #3d3d3d;
 }
 
+.already_account_div{
+    margin-bottom: 5%;
+}
+
 .already_account_text{
-    margin-top: 2%;
-    margin-bottom: 2%;
+    margin-top: -2%;
+    margin-bottom: 3%;
     color: #9B9B9B;
     font-weight: bold;
     font-family: monospace;
