formulario admin para añadir y/o modificar usuarios/playlists

--- a/public/css/admin-forms.css
+++ b/public/css/admin-forms.css
@@ -2,6 +2,10 @@
     font-family: 'Space Mono', monospace;
 }
 
+.admin-form {
+    border-radius: 20px !important;
+}
+
 .save-btn {
     background-color: #3500D3;
     color: #fff;
