--- a/public/css/songs_panel_style.css
+++ b/public/css/songs_panel_style.css
@@ -109,6 +109,7 @@ html {
         font-size: larger;
         margin-top: 5%;
         margin-bottom: 3%;
+        text-decoration: none;
     }
 
     .song_album_text {
@@ -283,6 +284,7 @@ html {
         font-size: larger;
         margin-top: 3%;
         margin-bottom: 3%;
+        text-decoration: none;
     }
 
     .song_album_text {
