--- a/public/css/admin_users_panel_style.css
+++ b/public/css/admin_users_panel_style.css
@@ -1,141 +1,28 @@
 
-html {
-    height: 100vh;
-    width: 100vw;
-    background-color: #282828;
-}
-
 /*--------------------------------------------------- Content --------------------------------------------------------*/
 
 /*----------------------------------- Users - Browser - Add User Subheader Section -------------------*/
+.title {
+    margin-left: 4rem;
+}
 .subheaders_section {
     background-color: #282828;
-    float: left;
-    display: grid;
-    width: 100%;
-    grid-template-columns: auto auto auto;
-    margin-top: 3%;
-    margin-left: 3%;
-    grid-column-gap: 14%;
+    padding-top: 4rem;
 }
 
-.subheaders {
-    float: left;
-    margin-top: 2%;
-    margin-left: 10%;
+.icono {
+    font-size: 3rem;
 }
-
-.subheaders_titles {
-    color: white;
-    font-family: none;
-    font-size: xxx-large;
-}
-
-
-.subheaders_browser_div {
-    float: left;
-    margin-top: 8%;
-    margin-left: 5%;
-    margin-right: 7%;
-}
-
-.browser_input {
-    border-radius: 22px;
-    text-align: center;
-    background: url(../images/lupa_buscador.png) no-repeat 220px -1px;
-    background-size: contain;
-    background-color: white;
-}
-
-.subheaders_btn_div {
-    float: right;
-    margin-top: 5.5%;
-    margin-right: 10%;
-    width: 70%;
-    margin-left: 7%;
-}
-.subheaders_btn_image {
-    width: 17%;
-    margin-bottom: 2%;
-}
-
-.subheaders_link {
-    font-family: none;
-    text-decoration: none;
-    color: white;
-    font-size: x-large;
-}
-
 /*----------------------------------- Users Section -------------------------------------------------*/
 .users_section {
-    float: left;
     background-color: #282828;
-    display: grid;
-    grid-template-columns: auto auto auto auto auto;
-    margin-left: 1%;
-    margin-top: 5%;
-    width: 100%;
-}
-
-.user_div {
-    text-align: center;
+    padding: 4rem;
 }
 
 .user_img {
-    width: 54%;
-    margin-top: 2%;
-    padding: 1%;
+    width: 200px;
 }
 
-.user_name_text {
-    color: white;
-    font-size: x-small;
-    text-align: center;
-    margin-top: 9%;
-}
-
-.edit_delete_btns {
-    text-align: center;
-    margin-bottom: 15%;
-}
-
-.user_edit_form {
-    width: 11%;
-    float: left;
-    margin-left: 37%;
-}
-
-.user_delete_form {
-    width: 11%;
-    float: left;
-}
-
-.edit_btn {
-    padding: 10%;
-    text-align: center;
-    outline: none;
-    color: #fff;
-    background-color: #066397;
-    border: none;
-    border-radius: 50%;
-    padding-right: 20%;
-    padding-left: 20%;
-}
-
-.edit_btn_img {
-}
-
-.delete_btn {
-    padding: 10%;
-    text-align: center;
-    outline: none;
-    color: #fff;
-    background-color: red;
-    border: none;
-    border-radius: 50%;
-    padding-left: 20%;
-    padding-right: 24%;
-}
-
-.delete_btn_img {
+.action-icon {
+    font-size: 2rem;
 }
