--- a/public/css/login_style.css
+++ b/public/css/login_style.css
@@ -1,4 +1,46 @@
 body {
+    background-color: #282828
+}
+.login-container {
+    margin-top: 4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.login_logo {
+    width: 250px;
+}
+
+.login-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 200px;
+}
+
+input {
+    min-width: 250px;
+    padding: 0.8rem;
+    margin-bottom: 1.5rem;
+    background-color: #464646;
+    border-radius: 0.2rem;
+    border: none;
+    color: #ffffff;
+}
+
+/* Media Query para PC */
+@media only screen and (min-width: 768px){
+    .login_logo {
+        width: 500px;
+    }
+    input {
+        width: 500px;
+    }
+}
+
+/*
+body {
     background: #282828;
 }
 
@@ -77,3 +119,4 @@ h2 {
 }
 
 
+*/
