--- a/public/css/signup_style.css
+++ b/public/css/signup_style.css
@@ -1,4 +1,71 @@
 body {
+    background-color: #282828
+}
+.signup-container {
+    margin-top: 2.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.signup_logo {
+    width: 250px;
+}
+
+.signup-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 200px;
+}
+
+input, button {
+    min-width: 250px;
+    padding: 0.8rem;
+    margin-bottom: 1.5rem;
+    background-color: #464646;
+    border-radius: 0.2rem;
+    border: none;
+    color: #ffffff;
+}
+
+.btn .glyphicon {
+    font-size: 3rem;
+    color: #fff;
+}
+
+.btn {
+    border-radius: 0.2rem;
+    background-color: #3500D3;
+    width: 75%;
+    color: #ffffff;
+    border: 1px solid white;
+    font-weight:bold;
+    font-family: monospace;
+}
+
+.already_account_div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.already_account_text {
+    font-size: 0.75rem;
+}
+
+/* Media Query para PC */
+@media only screen and (min-width: 768px){
+    .signup_logo {
+        width: 400px;
+    }
+    input, button {
+        width: 400px;
+    }
+}
+
+/*
+body {
     background: #282828;
 }
 
@@ -84,7 +151,7 @@ h2 {
 
 
 
-/* Media Query para Móvil */
+!* Media Query para Móvil *!
 @media only screen and (max-width: 767px){
 
     input {
@@ -100,3 +167,4 @@ h2 {
 
 }
 
+*/
