--- a/public/css/playlist.css
+++ b/public/css/playlist.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-color: #282828;
+    background-color: #282828 !important;
 }
 
 .main-playlist{
@@ -48,6 +48,10 @@ button{
 
 .playlist-icon{
     font-size: 24px;
+}
+
+.cards-div{
+    display: none !important;
 }
 
 @media screen and (max-width: 768px){
