--- a/public/css/playlist.css
+++ b/public/css/playlist.css
@@ -54,6 +54,9 @@ button{
     display: none !important;
 }
 
+.playlistImg {
+    max-width: 241px;
+}
 @media screen and (max-width: 768px){
 
     .table-div{
