--- a/public/css/playlist.css
+++ b/public/css/playlist.css
@@ -21,6 +21,10 @@ h2,h3,h4,h4,p,th,td{
     font-weight: lighter;
 }
 
+.playlistImg{
+    width: 400px;
+}
+
 .playlist-title{
     font-weight: bold;
     font-size: 3rem;
@@ -44,6 +48,15 @@ button{
     border: 2px solid #3500D3;
     border-radius: 1rem;
     padding: .5rem 1.5rem;
+    font-size: .75rem;
+}
+
+.unfollow-button{
+    border: 2px solid white;
+    background-color: #3500D3;
+    border-radius: 1rem;
+    padding: .5rem 1.5rem;
+    font-size: .75rem;
 }
 
 .playlist-icon{
