--- a/public/css/search_dashboard_style.css
+++ b/public/css/search_dashboard_style.css
@@ -22,3 +22,9 @@
 .result_div {
     margin-bottom: 4rem;
 }
+
+@media screen and (max-width: 768px) {
+    .search-bar {
+        margin-left: 2rem;
+    }
+}
